[package]
name = "bft_simulation"
version = "0.1.0"
authors = ["Martin Nischwitz <martin.nischwitz@ptb.de>"]
edition = "2018"

[dependencies]
tokio = "^0.1"
tokio-tls = "^0.2"
tokio-executor = "^0.1"
tokio-threadpool = "^0.1"
binary-heap-plus = "^0.2.0"
rand = "^0.7.0-pre.1"
log = "^0.4.6"
log4rs = "^0.8.3"

mc_utils = { path = "./mc_utils" }